# jams

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
eval/: README.md  TRAINING.md  acquire_dataset.py  acquire_egmd.py  acquire_gsmtg.py  acquire_harmonix.py  acquire_medleydb.py  acquire_raveform.py  acquire_slakh.py  align_harmonix.py  analyze_errors.py  benchmark_final.py  benchmark_methods.py  build_corrections.py  evaluate.py  evaluate_structure.py  evaluate_transcription.py  madmom_key_baseline.py  mlflow_backfill.py  prepare_raveform_training.py  stats_significance.py  structure_class_cis.py  tempo_corrections.csv  train_drum_cnn.py  train_key_cnn.py  train_mode_model.py  train_tempo_cnn.py  wandb2mlflow_daemon.py
eval/synth/: .gitignore  DATASET_CARD.md  RUNBOOK.md  __init__.py  arrange.py  bass.py  build_vitalium.sh  config.py  corpus.py  dexed.py  diversity.py  drums.py  fx.py  mixmaster.py  oneshots.py  patches.py  presets.py  render.py  surge.py  synths.py  theory.py  validate.py  vital_state.py  vitalium.py  wavetable.py
paper/: DRAFT.md  EXPERIMENTS.md  STATS.md  VENUE.md
paper/arxiv/: main.bbl  main.tex  make_figures.py  references.bib
scripts/: dev.sh
src/jams/: __init__.py  config.py  jams_export.py  models.py  server.py
src/jams/analysis/: __init__.py  audio.py  gm.py  key.py  key_cnn.py  stems.py  structure.py  tempo.py  tempo_cnn.py
src/jams/api/: app.py  jobs.py  routes.py
src/jams/data/: README.md  drum_worker.py  key_cnn_worker.py  key_fusion.json  mode_model.json  skey_worker.py  stems_worker.py  structure_worker.py  tempo_cnn_worker.py  yourmt3_worker.py
src/jams/data/melroformer/: __init__.py  attend.py  mel_band_roformer.py
src/jams/data/models/: key_cnn_v1.pt
src/jams/data/scnet/: __init__.py  demix.py  scnet.py  separation.py
tests/: conftest.py  test_api.py  test_jams_export.py  test_jobs.py  test_key_cnn.py  test_key_fusion.py  test_key_replay_helpers.py  test_no_fallback.py  test_resegment.py  test_stems.py  test_structure.py  test_tempo_cnn.py  test_tempo_resolution.py
webapp/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
webapp/server/: annotations.ts  imports.test.ts  imports.ts  index.ts  paths.ts
webapp/shared/: types.ts
webapp/src/: App.tsx  api.ts  config.ts  importPrefs.ts  labels.ts  peakCache.ts  store.ts  styles.css
webapp/src/components/: DataVizStack.tsx  ImportDropZone.tsx  Inspector.tsx  PianoRoll.tsx  Playhead.tsx  SectionSlider.tsx  StemLanes.tsx  TrackList.tsx  Transport.tsx  Waveform.tsx
webapp/src/hooks/: useAudio.ts  usePeaks.ts  useTimelineWheel.ts
