[project]
name = "jams"
version = "0.1.0"
description = "Music-analysis API — per-track key, tempo, and structure detection for DJ/electronic music"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "John Hurliman", email = "jhurliman@jhurliman.org" }]
keywords = ["music", "mir", "key-detection", "tempo", "bpm", "dj", "essentia"]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=1.24",
    "librosa>=0.10",
    "essentia-tensorflow>=2.1b6.dev1110",
]

[project.optional-dependencies]
# Song-structure (beats / downbeats / segments) via the All-In-One model on Replicate.
structure = ["replicate>=1.0.0", "requests>=2.31"]
# Reproduce / extend the accuracy benchmark (GiantSteps via mirdata).
eval = ["mirdata>=0.3.9", "tqdm>=4.66", "scikit-learn>=1.3"]

[project.scripts]
jams = "jams.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "soundfile>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jams"]
# Ship the pretrained TempoCNN graph as package data.
artifacts = ["src/jams/data/models/*.pb", "src/jams/data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
