[project]
name = "jams"
version = "0.1.0"
description = "Music-analysis API — per-track key, tempo, and structure detection for DJ/electronic music"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "John Hurliman", email = "jhurliman@jhurliman.org" }]
keywords = ["music", "mir", "key-detection", "tempo", "bpm", "dj"]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "numpy>=1.24",
    "librosa>=0.10",
    "pretty_midi>=0.2.10",
]

[project.optional-dependencies]
# Song structure (beats / downbeats / segments). The default "local" backend runs
# All-In-One on-device via a self-contained uv worker (src/jams/data/structure_worker.py)
# that bootstraps its own env — nothing to install here. These deps are only for the
# optional "replicate" backend (hosted model).
structure = ["replicate>=1.0.0", "requests>=2.31"]
# Reproduce / extend the accuracy benchmark (GiantSteps key/tempo + Harmonix structure).
eval = ["mirdata>=0.3.9", "tqdm>=4.66", "scikit-learn>=1.3", "mir_eval>=0.7", "yt-dlp>=2024.1", "pretty_midi>=0.2.10", "soundfile>=0.12", "mlflow-skinny>=2.14"]

[project.scripts]
jams = "jams.server:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "soundfile>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jams"]
# Ship the bundled model weights + the self-contained uv workers as package data.
artifacts = ["src/jams/data/models/*.pt", "src/jams/data/*.json", "src/jams/data/structure_worker.py", "src/jams/data/stems_worker.py", "src/jams/data/drum_worker.py", "src/jams/data/key_cnn_worker.py", "src/jams/data/tempo_cnn_worker.py", "src/jams/data/scnet/*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
# Vendored third-party code (SCNet, MIT) is kept byte-faithful to upstream — don't lint it.
extend-exclude = ["src/jams/data/scnet/scnet.py", "src/jams/data/scnet/separation.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
